trying to finish the last step